automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,11 @@ p {
 
 span {
   display: inline-block;
-  font-size: .9em;
-  line-height: 1.9em;
-  letter-spacing: .1em;
+  font-size: 1em;
+  line-height: 1em;
+  letter-spacing: .35em;
   vertical-align: top;
-  padding-top: 0px;
+  padding-top: 10px;
 }
 
 img {
